--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,8 @@ spring.mail.host=smtp.qq.com
 spring.mail.username=1575519051@qq.com
 spring.mail.password=unhcecthxrctfiad
 spring.mail.default-encoding=UTF-8
+
+#\u9ED8\u8BA4\u6CA1\u6709\u914D\u7F6E\u7528\u6237\u540D\u548C\u5BC6\u7801\uFF0C\u672C\u673A\u4F7F\u7528\u672A\u914D\u7F6E\u7528\u6237\u5BC6\u7801\u8FDE\u63A5
+spring.data.mongodb.uri=mongodb://localhost:27017/test
+#\u6709\u914D\u7F6E\u7528\u6237\u540D\u548C\u5BC6\u7801\u4F7F\u7528\u5982\u4E0B\u94FE\u63A5
+#spring.data.mongodb.uri=mongodb://name:pass@localhost:27017/test
